Fix Image Distortion and Clickable Issue

--- a/css/style.css
+++ b/css/style.css
@@ -548,7 +548,7 @@ nav .fa {
 }
 
 .card {
-  cursor: pointer;
+  /* cursor: pointer; */
   text-align: center;
   animation: slideIn 0.5s ease-in-out;
   transform: translateY(-2.2rem);
@@ -572,6 +572,7 @@ nav .fa {
 .card img {
   height: 200px;
   width: 200px;
+  object-fit: cover;
   border-radius: 50%;
 }
 
@@ -579,7 +580,6 @@ nav .fa {
   /* border: 5px solid #f9004d; */
   outline: 0px solid transparent;
   padding: 3px 3px;
-  border: 2px solid red;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
